Table scrollbar fix.

--- a/pinglist/proj/static/css/main.css
+++ b/pinglist/proj/static/css/main.css
@@ -310,6 +310,9 @@ footer {
 .table {
     min-width: 940px;
 }
+.table-container .table {
+    margin-bottom: 0;
+}
 
 /* Labels */
 
